Update the default JVM options